[gd_scene load_steps=2 format=3 uid="uid://bmgrc2rtmwni6"]

[ext_resource type="Script" uid="uid://ui3j7jwmg36q" path="res://scene/Component/date_selection.gd" id="1_7ycu3"]

[node name="DateSelection" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7ycu3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="YearButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Year" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "年"

[node name="MonthButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Month" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "月"

[node name="DayButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Day" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "日"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HourSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
max_value = 24.0
rounded = true

[node name="Hour" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "时"

[node name="MinuteSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
max_value = 60.0
rounded = true

[node name="Minute" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "分"
